Reworked navbar and fixed responsive layout issue

--- a/app/static/css/navbar.css
+++ b/app/static/css/navbar.css
@@ -13,10 +13,21 @@ nav {
   z-index: 1;
 }
 
-.nav__left {
+.main__navbar {
   display: flex;
   align-items: center;
-  justify-content: center;
+  padding: 0.5% 1%;
+  width: 100%;
+}
+
+.nav__left, .nav__right {
+  display: flex;
+  flex: 0 1 auto;
+  align-items: center;
+}
+
+.nav__right {
+  justify-content: flex-end;
 }
 
 .nav__left a {
@@ -28,7 +39,7 @@ nav {
   color: #039752; 
   font-size: 2em;
   margin-bottom: 0;
-  margin-right: 20px;
+  margin-right: 0.5em;
 }
 
 .nav__hamburger-menu {
@@ -46,9 +57,22 @@ nav {
   list-style-type: none;
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 1rem;
   margin-bottom: 0px;
+  padding: 0;
   align-items: center;
+}
+
+.nav__left .nav__links {
+  font-size: 1em;
+}
+
+.nav__right .nav__links {
+  gap: 1.5rem;
+}
+
+.nav__links li {
+  flex: 1 0 auto;
 }
 
 .nav__link {
@@ -67,18 +91,22 @@ nav {
   background-color: #039752;
   font-size: 0.9em;
   height: 40px;
-  padding: 8px 20px 8px 20px;
+  padding: 8px 15px;
   border-radius: 6px;
   color: #fff;
+}
+
+div:has(.nav__button) {
+  flex-shrink: 0;
 }
 
 /* Search */
 .nav__search-container {
   position: relative;
-  display: inline-block;
-  margin-left: 20px;
-  width: 45vw;
+  justify-content: center;
+  flex: 1 1 auto;
 }
+
 
 .nav__search-bar {
   width: 100%;
@@ -95,9 +123,9 @@ nav {
 }
 
 .nav__search-button {
-  background-color: #039752;
+  -webkit-text-stroke: 0.7px #039752;
   padding: 12px;
-  color: #fff;
+  color: #039752;
   position: absolute;
   right: 0px;
   top: 50%;
@@ -158,13 +186,18 @@ nav {
   opacity: 0.8;
 }
 
+.offcanvas-backdrop {
+  width: 100%;
+  height: 100%;
+}
+
 /* Options menu */
 .nav__optionMenu {
   display: none;
   position: absolute;
   top: 100%;
-  right: 50px;
-  width: 150px;
+  right: 20px;
+  width: 94.48px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
   z-index: 1;
   /* padding: 10px; */
@@ -211,20 +244,34 @@ nav {
 
   .nav__links {
     justify-content: flex-end;
-    gap: 7px;
+    gap: 1px;
   }
 
   .nav__desktop {
     display: none;
   }
 
-  .nav__hamburger-menu {
-    display: block;
-    margin-left: auto;
+  .nav__links {
+    display: grid;
+  }
+
+  .nav__links li:not(:first-child) {
+    display: none;
+  }
+  
+  li:first-child {
     justify-self: flex-end;
   }
 
+  .nav__hamburger-menu {
+    display: block;
+    margin-left: auto;
+  }
+
   .nav__search-container {
-    width: 70vw;
+    position: relative;
+    justify-content: center;
+    flex: 1 1 auto;
+    margin-right: 0.6rem;
   }
 }
